# Aml_CVDemo

./: .gitattributes  ReadMe.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/amlogic/cvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMAkeLists.txt  pre_image.cpp
app/src/main/java/com/amlogic/cvdemo/: AMLImageEditActivity.java  AMLSemanticSegmentationActivity.java  AMLSuperResolutionActivity.java  FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/java/com/amlogic/cvdemo/data/: ModelData.java  ModelKpiTime.java  ModelParams.java  ModelTime.java
app/src/main/res/layout/: activity_aml_image_edit.xml  activity_aml_semantic_segmentation.xml  activity_aml_super_resolution.xml  activity_main.xml  content_aml_semantic_segmentation.xml  content_aml_super_resolution.xml  content_main_customed.xml  content_scrolling.xml
app/src/main/res/layout-w1240dp/: content_scrolling.xml
app/src/main/res/layout-w936dp/: content_scrolling.xml
app/src/main/res/menu/: menu_aml_image_edit.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/amlogic/cvdemo/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openCvSdk/: build.gradle
openCvSdk/libcxx_helper/: CMakeLists.txt  dummy.cpp
(+21 files in other folders)
